--- a/views/includes/footer.pug
+++ b/views/includes/footer.pug
@@ -3,9 +3,9 @@ footer.d-flex.justify-content-between.align-items-center
     a(href='http://jigsaw.w3.org/css-validator/check/referer')
       img(src='../images/valid_html5.gif')
   .copyright.text-center
-    p= `© 2018-2019 ${author.name}`
-    a(href=`mailto:${author.email}`)
-      = author.email
+    p= `© 2018-2019 ${brand.author.name}`
+    a(href=`mailto:${brand.author.email}`)
+      = brand.author.email
   .css-validator
     a(href='http://validator.w3.org/check?uri=referer')
       img(src='../images/valid_css.gif')
