--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,21 +1,27 @@
 doctype html
 html(lang='en')
   head
-    if pageTitle
-      title= `${pageTitle} | ${title}`
-    else
-      title= title
+    block head
+      if page.title
+        title= `${page.title} | ${brand.title}`
+      else
+        title= brand.title
 
-    meta(charset='utf-8')
-    link(rel='stylesheet', href='https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css', integrity='sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T', crossorigin='anonymous')
-    link(rel='stylesheet', href='/stylesheets/style.css')
+      meta(charset='utf-8')
+      link(rel='stylesheet', href='https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css', integrity='sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T', crossorigin='anonymous')
+      link(rel='stylesheet', href='/stylesheets/style.css')
   body
 
-    include includes/header
+    .container
+      include includes/header
 
-    block content
+    .container
+      if page.demonstrates
+        p= `This page demonstrates ${page.demonstrates}`
+      block content
 
-    include includes/footer
+    .container
+      include includes/footer
 
     script(src='https://code.jquery.com/jquery-3.3.1.slim.min.js', integrity='sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo', crossorigin='anonymous')
     script(src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js', integrity='sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1', crossorigin='anonymous')
