Listed concepts on TOC

--- a/views/contract.pug
+++ b/views/contract.pug
@@ -1,9 +1,9 @@
 extends layout
 
 block content
-  h2= `${page.title} | Austin Malmberg`
+  h2= `${page.title} - Austin Malmberg`
   p I,
-    strong Austin Malmberg
+    strong  Austin Malmberg
     | , agree to abide by the terms of the course contract in my
     strong  2019 SP WEB215-85 Advanced Markup & Scripting
     |  with my instructor,
