--- a/views/includes/header.pug
+++ b/views/includes/header.pug
@@ -1,4 +1,4 @@
-header
+header.container
 
   - const navClasses = ['navbar', 'navbar-expand-md', 'navbar-dark', 'bg-dark']
   nav(class=navClasses)
