--- a/views/includes/footer.pug
+++ b/views/includes/footer.pug
@@ -1,4 +1,4 @@
-footer.d-flex.justify-content-between.align-items-center
+footer.container.d-flex.justify-content-between.align-items-center
   .html-validator
     a(href='http://jigsaw.w3.org/css-validator/check/referer')
       img(src='../images/valid_html5.gif')
