--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,7 +2,7 @@ doctype html
 html(lang='en')
   head
     block head
-      if page.title
+      if page && page.title
         title= `${page.title} | ${brand.title}`
       else
         title= brand.title
@@ -12,16 +12,19 @@ html(lang='en')
       link(rel='stylesheet', href='/stylesheets/style.css')
   body
 
-    .container
-      include includes/header
+    include includes/header
 
-    .container
-      if page.demonstrates
-        p= `This page demonstrates ${page.demonstrates}`
+    .container.themes
+      if page && page.concepts
+        p!= 'This page demonstrates the following concepts:'
+        ul
+          each concepts in page.concepts
+            li=concepts
+
+    .container.main
       block content
 
-    .container
-      include includes/footer
+    include includes/footer
 
     script(src='https://code.jquery.com/jquery-3.3.1.slim.min.js', integrity='sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo', crossorigin='anonymous')
     script(src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js', integrity='sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1', crossorigin='anonymous')
