--- a/views/compass.pug
+++ b/views/compass.pug
@@ -4,4 +4,6 @@ append head
   link(rel='stylesheet', href='/stylesheets/one-div-demo.css')
 
 block content
+  h2= page.title
+  p The image below was created using a single div and CSS.
   .compass
