--- a/views/gear.pug
+++ b/views/gear.pug
@@ -14,4 +14,4 @@ block content
         p= paragraph
       p= `Purchased for $${item.price}`
       .gearsheet(id=`img-${item.id}`)
-      a#top(href='#') Top
+      a.top(href='#') Top
