--- a/views/includes/footer.pug
+++ b/views/includes/footer.pug
@@ -1,11 +1,14 @@
 footer.container.d-flex.justify-content-between.align-items-center
+
   .html-validator
     a(href='http://jigsaw.w3.org/css-validator/check/referer')
-      img(src='../images/valid_html5.gif')
+      img(src='../images/valid_html5.gif' alt='HTML validator image')
+
   .copyright.text-center
     p= `© 2018-2019 ${brand.author.name}`
     a(href=`mailto:${brand.author.email}`)
-      = brand.author.email
+      =brand.author.email
+      
   .css-validator
     a(href='http://validator.w3.org/check?uri=referer')
-      img(src='../images/valid_css.gif')
+      img(src='../images/valid_css.gif' alt='CSS validator image')
