--- a/views/contract.pug
+++ b/views/contract.pug
@@ -1,15 +1,16 @@
 extends layout
 
 block content
-  h2= `${page.title} - Austin Malmberg`
-  p I,
-    strong  Austin Malmberg
-    | , agree to abide by the terms of the course contract in my
-    strong  2019 SP WEB215-85 Advanced Markup & Scripting
-    |  with my instructor,
-    strong  D.I. von Briesen
-    | .
-  p I understand that all work that I do on my school and personal website will be publicly available to the world, and will not put information there that is inappropriate for schoolwork, or that I wish to keep private.
-  p I also understand that it is my work that counts for attendance, not logins or showing up for class. As such, failure to turn in assignments may show as absences.
-  p Signed:
-    strong  Austin C. Malmberg, January 13, 2019
+  section.section-firstclass.border.rounded
+    h2= page.title
+    p I,
+      strong  Austin Malmberg
+      | , agree to abide by the terms of the course contract in my
+      strong  2019 SP WEB215-85 Advanced Markup & Scripting
+      |  with my instructor,
+      strong  D.I. von Briesen
+      | .
+    p I understand that all work that I do on my school and personal website will be publicly available to the world, and will not put information there that is inappropriate for schoolwork, or that I wish to keep private.
+    p I also understand that it is my work that counts for attendance, not logins or showing up for class. As such, failure to turn in assignments may show as absences.
+    p Signed:
+      strong  Austin C. Malmberg, January 13, 2019
