--- a/views/feedback.pug
+++ b/views/feedback.pug
@@ -18,7 +18,8 @@ block content
         +formInput('Subject', 'text', 'title-input')
         .form-group
           label(for='msg-input') Message
-          textArea.form-control(id='msg-input' rows="3")
+          textArea.form-control(id='msg-input' rows='3')
+        button.btn.btn-primary.btn-block(type='submit') Submit
 
     section.section-firstclass.border.rounded
       if comments
