--- a/views/includes/header.pug
+++ b/views/includes/header.pug
@@ -1,5 +1,5 @@
 - const cHeader = ['container', 'site-header'];
-- const cNav = ['navbar', 'navbar-expand-md', 'navbar-dark'];
+- const cNav = ['navbar', 'navbar-expand-md', 'navbar-dark', 'rounded-bottom'];
 - const cNavbar = ['navbar-nav', 'ml-auto'];
 
 
